--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="hero__left" data-aos="fade-left">
           <div class="hero__left__wrapper">
 
-            <h1 class="hero__heading">Titolo Principale</h1>
+            <h1 class="hero__heading">Benvenuti</h1>
             <p class="hero__info">
               Tutto ebbe inizio molti anni fa, con una sfida buttata lì per caso. Poi la passione per quel disco di
               pasta e l' esigenza di imparare un mestiere, ha fatto sì che oggi si realizzasse, con non pochi sacrifici,
@@ -99,7 +99,10 @@
             10 AM - 7 PM
           </h3>
           <p class="storeInfo__text">
-            Orario d'apertura
+            Aperto tutti i giorni,
+          </p>
+          <p class="storeInfo__text">
+            chiuso il mercoledì
           </p>
         </div>
         <div class="storeInfo__item">
@@ -129,6 +132,20 @@
           <br>
           <br>
           <a href="tel:3343460259" class="btn primary-btn" >Chiamaci Ora</a>
+        </div>
+        <div class="storeInfo__item">
+          <div class="storeInfo__icon">
+            <img src="./images/whatsapp.svg" alt="whatsapp icon">
+          </div>
+          <h3 class="storeInfo__title">
+            +39 334 346 0259
+          </h3>
+          <p class="storeInfo__text">
+            Scrivici con Whatsapp
+          </p>
+          <br>
+          <br>
+          <a href="https://wa.me/3343460259" class="btn primary-btn" >Scrivici Ora</a>
         </div>
       </div>
     </div>
@@ -394,7 +411,7 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="tel:3343460259">334 346 0259</a>
+              <a href="tel:3343460259">+39 334 346 0259</a>
             </li>
             <li>
               <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
