--- a/menu.html
+++ b/menu.html
@@ -1235,7 +1235,7 @@
           -->
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              1)
+               N° 1)
             </h3>
             <h3 class="dishGrid__item__price">€7</h3>
             <div class="dishGrid__item__text">
@@ -1253,7 +1253,7 @@
           -->
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              2)
+              N° 2)
             </h3>
             <h3 class="dishGrid__item__price">€7</h3>
             <div class="dishGrid__item__text">
@@ -1271,7 +1271,7 @@
           -->
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              3)
+              N° 3)
             </h3>
             <h3 class="dishGrid__item__price">€6</h3>
             <div class="dishGrid__item__text">
@@ -1289,7 +1289,7 @@
           -->
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
-              4)
+              N° 4)
             </h3>
             <h3 class="dishGrid__item__price">€6</h3>
             <div class="dishGrid__item__text">
@@ -1373,11 +1373,11 @@
             <h3 class="dishGrid__item__title">
               Arancinette al ragù
             </h3>
-            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price">P €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €5</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €7</h3>
+            <h3 class="dishGrid__item__price">G €7</h3>
           </div>
         </div>
         <div class="dishGrid__item">
@@ -1390,11 +1390,11 @@
             <h3 class="dishGrid__item__title">
               Arancinette agli spinaci
             </h3>
-            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price">P €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €5</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €7</h3>
+            <h3 class="dishGrid__item__price">G €7</h3>
           </div>
         </div>
         <div class="dishGrid__item">
@@ -1407,11 +1407,11 @@
             <h3 class="dishGrid__item__title">
               Panelle
             </h3>
-            <h3 class="dishGrid__item__price">S €3</h3>
+            <h3 class="dishGrid__item__price">P €3</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €5</h3>
+            <h3 class="dishGrid__item__price">G €5</h3>
           </div>
         </div>
         <div class="dishGrid__item">
@@ -1424,11 +1424,11 @@
             <h3 class="dishGrid__item__title">
               Crocchette di patate
             </h3>
-            <h3 class="dishGrid__item__price">S €3.50</h3>
+            <h3 class="dishGrid__item__price">P €3.50</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €4.50</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €6</h3>
+            <h3 class="dishGrid__item__price">G €6</h3>
           </div>
         </div>
         <div class="dishGrid__item">
@@ -1441,11 +1441,11 @@
             <h3 class="dishGrid__item__title">
               Patatine
             </h3>
-            <h3 class="dishGrid__item__price">S €3</h3>
+            <h3 class="dishGrid__item__price">P €3</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €5</h3>
+            <h3 class="dishGrid__item__price">G €5</h3>
           </div>
         </div>
         <div class="dishGrid__item">
@@ -1458,11 +1458,11 @@
             <h3 class="dishGrid__item__title">
               Fritto Misto
             </h3>
-            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price">P €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €5</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €7</h3>
+            <h3 class="dishGrid__item__price">G €7</h3>
             <div class="dishGrid__item__text">
               <p>
                 Patatine, Crocchette, Panelle
@@ -1480,11 +1480,11 @@
             <h3 class="dishGrid__item__title">
               Polpettine in Agrodolce
             </h3>
-            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price">P €4</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">M €6</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">L €8</h3>
+            <h3 class="dishGrid__item__price">G €8</h3>
           </div>
         </div>
 
@@ -1564,7 +1564,7 @@
             </h3>
             <div class="dishGrid__item__text">
               <p>
-                I supplementi variano da €0,50 a €3,00
+                Pizza Baby €1.00 in meno
               </p>
             </div>
           </div>
@@ -1636,7 +1636,7 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="tel:3343460259">334 346 0259</a>
+              <a href="tel:3343460259">+39 334 346 0259</a>
             </li>
             <li>
               <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
