--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="nav__list__wrapper">
 
               <li><a class="nav__link" href="./index.html">Home</a></li>
-              <!-- <li><a class="nav__link" href="./about.html">La Pizzeria</a></li> -->
+              <!--<li><a class="nav__link" href="./about.html">La Pizzeria</a></li>-->
               <li><a class="nav__link" href="./contact.html">Contattaci</a></li>
               <li><a href="./menu.html" class="btn primary-btn">Menu</a></li>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="hero__right" data-aos="fade-right">
           <div class="hero__imgWrapper">
-            <img src="./images/LOgoGrande.svg" alt="image">
+            <img src="./images/img_1.png" alt="image">
           </div>
         </div>
       </div>
@@ -316,6 +316,7 @@
   <!-- End Events Media -->
 
   <!-- Why Us section -->
+  <!--
   <section id="whyUs">
     <div class="container">
       <div class="whyUs__wrapper">
@@ -329,7 +330,7 @@
             a legna con l'uso esclusivo di legna di faggio certificata.
           </p>
         </div>
-        <!--
+
         <div class="whyUs__right" data-aos="fade-left">
           <div class="whyUs__items__wrapper">
             <div class="whyUs__item">
@@ -358,10 +359,11 @@
             </div>
           </div>
         </div>
-        -->
+
       </div>
     </div>
   </section>
+  -->
   <!-- End Why Us section -->
 
   <!-- Footer -->
