--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,6 @@
           Guarda il nostro menu
         </h2>
       </div>
-      </br>
       <!--
       <div>
         <a href="./images/menuL'angoloDellaPizza.jpg" class="btn primary-btn" target="_blank">Oppure Scaricalo</a>
@@ -915,6 +914,77 @@
   </section>
   <!-- End Pizze Classiche Dishes -->
 
+  <!-- Sezione Carosello -->
+  <section class="product">
+      <h2 class="product-category">Pizze Speciali</h2>
+      <div class="product-container">
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/a%20mortadella.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">A Mortadella</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/burrata2.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Burrata</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/angolo.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">L'angolo della Pizza</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/nettuno.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Nettuno</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/pistacchiosa.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Pistacchiosa</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/polpettina.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Polpettina</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/superporcini.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Superporcini</h2>
+              </div>
+          </div>
+      </div>
+  </section>
+    <!-- Fine sezione carosello -->
+
   <!-- Pizze Speciali Dishes -->
   <section id="specialiDishes" data-aos="fade-up">
     <div class="container">
@@ -1088,6 +1158,50 @@
   </section>
   <!-- End Pizze Speciali Dishes -->
 
+  <!-- Sezione Carosello -->
+  <section class="product">
+      <h2 class="product-category">Pizze Cremose</h2>
+      <div class="product-container">
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/golosa.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Golosa</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/mantovana.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Mantovana</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/profumod'autunno.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Profumo d'Autunno</h2>
+              </div>
+          </div>
+          <div class="product-card">
+              <div class="product-image">
+                  <img src="images/zingara.jpeg" class="product-thumb" alt="">
+                  <button class="card-btn">Ordina ora</button>
+              </div>
+              <div class="product-info">
+                  <h2 class="product-brand">Zingara</h2>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!-- Fine sezione carosello -->
+
   <!-- Pizze Cremose Dishes -->
   <section id="cremoseDishes" data-aos="fade-up">
     <div class="container">
@@ -1117,11 +1231,11 @@
           </div>
         </div>
         <div class="dishGrid__item">
-          <!--
+            <!--
           <div class="dishGrid__item__img">
             <img src="./images/margherita.jpg" alt="food img">
           </div>
-          -->
+            -->
           <div class="dishGrid__item__info">
             <h3 class="dishGrid__item__title">
               Golosa
@@ -1683,6 +1797,7 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <!-- custom script -->
   <script src="./main.js"></script>
+  <script src="./menu.js"></script>
 </body>
 
 </html>
